--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import "variables.scss";
 @import "fonts.scss";
 @import "components.scss";
+@import "include/icons.scss";
 @import "include/footer.scss";
 @import "include/grid.scss";
 @import "include/nav.scss";
