--- a/src/scss/include/_spritesmith.scss
+++ b/src/scss/include/_spritesmith.scss
@@ -20,8 +20,8 @@ $game-width: 22px;
 $game-height: 15px;
 $game-total-width: 92px;
 $game-total-height: 60px;
-$game-image: 'sprite.png';
-$game: (0px, 45px, 0px, -45px, 22px, 15px, 92px, 60px, 'sprite.png', 'game', );
+$game-image: '../img/sprites/sprite.png';
+$game: (0px, 45px, 0px, -45px, 22px, 15px, 92px, 60px, '../img/sprites/sprite.png', 'game', );
 $mobiles-name: 'mobiles';
 $mobiles-x: 0px;
 $mobiles-y: 0px;
@@ -31,8 +31,8 @@ $mobiles-width: 46px;
 $mobiles-height: 40px;
 $mobiles-total-width: 92px;
 $mobiles-total-height: 60px;
-$mobiles-image: 'sprite.png';
-$mobiles: (0px, 0px, 0px, 0px, 46px, 40px, 92px, 60px, 'sprite.png', 'mobiles', );
+$mobiles-image: '../img/sprites/sprite.png';
+$mobiles: (0px, 0px, 0px, 0px, 46px, 40px, 92px, 60px, '../img/sprites/sprite.png', 'mobiles', );
 $music-name: 'music';
 $music-x: 75px;
 $music-y: 0px;
@@ -42,8 +42,8 @@ $music-width: 17px;
 $music-height: 17px;
 $music-total-width: 92px;
 $music-total-height: 60px;
-$music-image: 'sprite.png';
-$music: (75px, 0px, -75px, 0px, 17px, 17px, 92px, 60px, 'sprite.png', 'music', );
+$music-image: '../img/sprites/sprite.png';
+$music: (75px, 0px, -75px, 0px, 17px, 17px, 92px, 60px, '../img/sprites/sprite.png', 'music', );
 $play-name: 'play';
 $play-x: 51px;
 $play-y: 0px;
@@ -53,13 +53,13 @@ $play-width: 19px;
 $play-height: 19px;
 $play-total-width: 92px;
 $play-total-height: 60px;
-$play-image: 'sprite.png';
-$play: (51px, 0px, -51px, 0px, 19px, 19px, 92px, 60px, 'sprite.png', 'play', );
+$play-image: '../img/sprites/sprite.png';
+$play: (51px, 0px, -51px, 0px, 19px, 19px, 92px, 60px, '../img/sprites/sprite.png', 'play', );
 $spritesheet-width: 92px;
 $spritesheet-height: 60px;
-$spritesheet-image: 'sprite.png';
+$spritesheet-image: '../img/sprites/sprite.png';
 $spritesheet-sprites: ($game, $mobiles, $music, $play, );
-$spritesheet: (92px, 60px, 'sprite.png', $spritesheet-sprites, );
+$spritesheet: (92px, 60px, '../img/sprites/sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
